fixed testimonials on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -373,6 +373,7 @@
   justify-content: center;
   align-items: center;
   
+  
 }
 .testimonial-card {
   position: relative;
@@ -429,7 +430,18 @@
  font-weight: 500;
  text-shadow: 0px 0px 2px var(--first_color);
 }
-
+@media screen and (max-width:600px) {
+  .testimonial-card {
+    width:100%;
+  }
+  .testimonial-paragraph {
+    height: 65%;
+    padding: 0.1rem 1rem;
+  }
+  .testimonial-paragraph h3 {
+    margin: 0px 0px 10px;
+  }
+}
 
 
 
